--- a/first-plugin/ui.html
+++ b/first-plugin/ui.html
@@ -18,15 +18,6 @@
     );
   };
 
-  // socket.on("ui-movement", (msg) => {
-  //   // console.log("IN FIGMA", msg);
-
-  //   parent.postMessage(
-  //     { pluginMessage: { type: "move-rectangle-x", msg } },
-  //     "*"
-  //   );
-  // });
-
   socket.on("right-pinch", (msg) => {
     parent.postMessage(
       { pluginMessage: { type: "resize-rectangle-y", msg } },
@@ -36,6 +27,10 @@
 
   socket.on("pan", (msg) => {
     parent.postMessage({ pluginMessage: { type: "pan", msg } }, "*");
+  });
+
+  socket.on("event", (msg) => {
+    parent.postMessage({ pluginMessage: { type: "event", msg } }, "*");
   });
 
   socket.on("zoom", (msg) => {
